[package]
name = "crate_version_parse"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"
license = "0BSD"
description = "simply parses crate-semver from a string"
repository = "https://github.com/museun/crate_version_parse"
readme = "README.md"
keywords = ["cargo", "crate", "parse", "semver", "nostd"]
categories = ["development-tools"]

[dependencies]
serde = { version = "^1.0", optional = true, features = ["derive"] }
