[package]
name          = "crate_version_parse"
version       = "0.2.0"
authors       = ["museun <museun@outlook.com>"]
edition       = "2018"
license       = "0BSD"
description   = "simply parses crate-semver from a string"
repository    = "https://github.com/museun/crate_version_parse"
documentation = "https://docs.rs/crate_version_parse"
readme        = "README.md"
keywords      = ["cargo", "crate", "parse", "semver", "nostd"]
categories    = ["development-tools"]

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "^1.0", optional = true, features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
